# json-parser

./: JSONDatasetDoc.odg  README.md  json-parser.cabal  package.yaml  stack.yaml
Coursework1/: Coursework1.cabal  cabal.sandbox.config
Coursework1/.cabal-sandbox/: world
Coursework1/.cabal-sandbox/lib/x86_64-linux-ghc-7.10.3/QuickCheck-2.9.1-DX5Yn01N2c7441Ee7rxL1s/Test/: QuickCheck.dyn_hi  QuickCheck.hi
Coursework1/.cabal-sandbox/lib/x86_64-linux-ghc-7.10.3/hashable-1.2.4.0-EalUWgp8NarBYWPbvYAD8I/Data/: Hashable.dyn_hi  Hashable.hi
Coursework1/.cabal-sandbox/lib/x86_64-linux-ghc-7.10.3/primitive-0.6.1.0-EphY2c7CCxSCBKjAN0YTR3/Data/: Primitive.dyn_hi  Primitive.hi
Coursework1/.cabal-sandbox/lib/x86_64-linux-ghc-7.10.3/transformers-compat-0.5.1.4-EfAx8JliEAN1Gu6x0L8GYr/: Paths_transformers_compat.dyn_hi  Paths_transformers_compat.hi
Coursework1/.cabal-sandbox/x86_64-linux-ghc-7.10.3-packages.conf.d/: QuickCheck-2.9.1-e185793fea1f8984229fc0652c8c6d2c.conf  hashable-1.2.4.0-2f6e980fdeff3f16111d43036e99487a.conf  package.cache  primitive-0.6.1.0-b2a7b9f8d5591c0d4ce7ef238a3217d2.conf  random-1.1-7d035f9e510822cd64834106e4acc4b7.conf  semigroups-0.18.2-d963e3e017fe2d80a200ff93b103769b.conf  tagged-0.8.5-f07c03126341d6673ff8372f4c32e505.conf  text-1.2.2.1-d0adb978563e9f52dc308d1d0db7212c.conf  tf-random-0.5-1a425ebf0c2fc5c4dbafe3974fdc2617.conf  transformers-compat-0.5.1.4-0ed5101ea925318f0fb3faf5fdfd6220.conf  unordered-containers-0.2.7.1-a4654f1d4b392b7728acd5923db28665.conf
Coursework1/src/: JSON.hs  JSONParser.hs  XML.hs  XMLParser.hs
app/: Main.hs
(+198 files in other folders)
